--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(topbac.avif);
+    background-image: url(topbac.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
